--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "Cantidad",
+        "Editar",
+        "Insertar",
         "Nombre",
         "Precio",
-        "Producto"
+        "Producto",
+        "Recuperar"
     ]
 }
