--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,13 @@
     "cSpell.words": [
         "Cantidad",
         "Editar",
+        "Eliminar",
         "Insertar",
         "Nombre",
         "Precio",
         "Producto",
-        "Recuperar"
+        "Realmente",
+        "Recuperar",
+        "Reiniciar"
     ]
 }
